[build-system]
build-backend = "setuptools.build_meta"
requires = ['setuptools>=61.2', "setuptools-scm", "requests", "dataclasses_json"]

[project]
authors = [
  {name = "Ludy87", email = "android@astra-g.org"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
  "Topic :: Utilities",
  "Topic :: Home Automation",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "requests>=2",
  "dataclasses-json>=0.6"
]
description = "Python EcoTrend-ista Api"
dynamic = ["version", "readme"]
keywords = ["python", "api", "ecotrend", "ista"]
license = {file = "LICENSE"}
name = "pyEcoTrend-ista"
# readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
doc = [
  "babel==2.17.0",
  "cachetools==5.5.2",
  "certifi==2025.1.31",
  "chardet==5.2.0",
  "charset-normalizer==3.4.1",
  "click==8.1.8",
  "colorama==0.4.6",
  "csscompressor==0.9.5",
  "distlib==0.3.9",
  "filelock==3.17.0",
  "ghp-import==2.1.0",
  "gitdb==4.0.12",
  "gitpython==3.1.44",
  "griffe==1.5.7",
  "htmlmin2==0.1.13",
  "idna==3.10",
  "jinja2==3.1.5",
  "jsmin==3.0.1",
  "markdown==3.7",
  "markdown-callouts==0.4.0",
  "markupsafe==3.0.2",
  "mdx-gh-links==0.4",
  "mergedeep==1.3.4",
  "mkdocs==1.6.1",
  "mkdocs-autorefs==1.3.1",
  "mkdocs-click==0.8.1",
  "mkdocs-get-deps==0.2.0",
  "mkdocs-git-authors-plugin==0.9.2",
  "mkdocs-git-committers-plugin-2==2.5.0",
  "mkdocs-git-revision-date-localized-plugin==1.4.4",
  "mkdocs-literate-nav==0.6.1",
  "mkdocs-material==9.6.5",
  "mkdocs-material-extensions==1.3.1",
  "mkdocs-minify-plugin==0.8.0",
  "mkdocstrings[python]==0.28.0",
  "mkdocstrings-python==1.13.0",
  "packaging==24.2",
  "paginate==0.5.7",
  "pathspec==0.12.1",
  "platformdirs==4.3.6",
  "pluggy==1.5.0",
  "pygments==2.19.1",
  "pymdown-extensions==10.14.3",
  "pyproject-api==1.9.0",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.1",
  "pyyaml==6.0.2",
  "pyyaml-env-tag==0.1",
  "regex==2024.11.6",
  "requests==2.32.3",
  "six==1.17.0",
  "smmap==5.0.2",
  "tomli==2.2.1",
  "tox==4.24.2",
  "typing-extensions==4.12.2",
  "urllib3==2.3.0",
  "virtualenv==20.29.3",
  "watchdog==6.0.0"
]
publish = [
  "tox==4.24.2"
]
test = [
  "tox==4.24.2",
  "pytest==8.2.2",
  "pytest-cov==6.0.0",
  "pytest-xdist==3.6.1",
  "requests-mock[fixture]==1.12.1",
  "syrupy==4.6.1"
]

[project.urls]
Documentation = "https://ludy87.github.io/pyecotrend-ista/"
Homepage = "http://github.com/Ludy87/pyecotrend-ista"
Repository = "http://github.com/Ludy87/pyecotrend-ista"

[tool.black]
line-length = 127
target-version = ["py311"]

[tool.numpydoc_validation]
checks = [
  "all",  # report on all checks, except the below
  "SA01",
  "GL01",
  "GL02",
  "GL03",
  "SS05"
]
exclude = [
  '\.__str__$'
]

[tool.pylint.FORMAT]
max-line-length = 127

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "too-many-ancestors",
  "too-many-arguments",
  "too-many-instance-attributes",
  "wrong-import-order",
  "too-many-lines",
  "too-many-locals"
]

[tool.pytest.ini_options]
addopts = "--cov=src/pyecotrend_ista/ --cov-report=term-missing -n auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
indent-width = 4
line-length = 127
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 127
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
extend-select = ["I", "TRY", "UP", "D", "W", "N"]
ignore = ["D213", "D202", "D203", "D213", "UP038", "D406", "D407", "TRY003"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["pyecotrend_ista"]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
version = {attr = 'pyecotrend_ista.__version.__version__'}
