[build-system]
build-backend = "setuptools.build_meta"
requires = ['setuptools>=77.0.3', "setuptools-scm", "requests", "dataclasses_json"]

[project]
authors = [
  {name = "Ludy87", email = "android@astra-g.org"},
  {name = "tr4nt0r", email = "4445816+tr4nt0r@users.noreply.github.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
  "Topic :: Utilities",
  "Topic :: Home Automation",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "requests>=2",
  "dataclasses-json>=0.6"
]
description = "Python EcoTrend-ista Api"
dynamic = ["version", "readme"]
keywords = ["python", "api", "ecotrend", "ista"]
license = "MIT"
license-files = ["LICENSE"]
name = "pyEcoTrend-ista"
# readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
doc = [
  "babel==2.17.0",
  "csscompressor==0.9.5",
  "ghp-import==2.1.0",
  "gitpython==3.1.45",
  "htmlmin2==0.1.13",
  "jinja2==3.1.6",
  "jsmin==3.0.1",
  "markdown==3.9",
  "markdown-callouts==0.4.0",
  "mdx-gh-links==0.4",
  "mkdocs==1.6.1",
  "mkdocs-autorefs==1.4.3",
  "mkdocs-click==0.9.0",
  "mkdocs-git-authors-plugin==0.10.0",
  "mkdocs-git-committers-plugin-2==2.5.0",
  "mkdocs-git-revision-date-localized-plugin==1.4.7",
  "mkdocs-literate-nav==0.6.2",
  "mkdocs-material==9.6.21",
  "mkdocs-material-extensions==1.3.1",
  "mkdocs-minify-plugin==0.8.0",
  "mkdocstrings[python]==1.0.0",
  "paginate==0.5.7",
  "pymdown-extensions==10.16.1",
  "pygments==2.19.2",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.2",
  "tox==4.30.3",
  "regex==2025.9.18",
  "watchdog==6.0.0"
]
publish = [
  "tox==4.30.3"
]
test = [
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "pytest-xdist==3.8.0",
  "requests-mock[fixture]==1.12.1",
  "syrupy==4.9.1",
  "tox==4.30.3"
]

[project.urls]
Documentation = "https://ludy87.github.io/pyecotrend-ista/"
Homepage = "http://github.com/Ludy87/pyecotrend-ista"
Repository = "http://github.com/Ludy87/pyecotrend-ista"

[tool.black]
line-length = 127
target-version = ["py311"]

[tool.numpydoc_validation]
checks = [
  "all",  # report on all checks, except the below
  "SA01",
  "GL01",
  "GL02",
  "GL03",
  "SS05"
]
exclude = [
  '\.__str__$'
]

[tool.pylint.FORMAT]
max-line-length = 127

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "too-many-ancestors",
  "too-many-arguments",
  "too-many-instance-attributes",
  "wrong-import-order",
  "too-many-lines",
  "too-many-locals"
]

[tool.pytest.ini_options]
addopts = "--cov=src/pyecotrend_ista/ --cov-report=term-missing -n auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
indent-width = 4
line-length = 127
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 127
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
extend-select = ["I", "TRY", "UP", "D", "W", "N"]
ignore = ["D213", "D202", "D203", "D213", "UP038", "D406", "D407", "TRY003"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["pyecotrend_ista"]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
version = {attr = 'pyecotrend_ista.__version.__version__'}
